bug fixes for v0.3

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <script type="text/javascript" src="arvonta.js"></script>
   </head>
   <body>
-    <h1 id="result">Perjantaipulloarvonta</h1>
+    <h1 id="result">Perjantaipullogeneraattori</h1>
     <main id="grid-container">
       <div id="uusiPelaaja">
-        <a onclick="addPlayer()"><i class="fa fa-plus-circle fa-2x" aria-hidden="true" id="plus"></i>&nbsp Uusi pelaaja</a>
+        <a onclick="addPlayer()"><i class="fa fa-plus-circle fa-2x" aria-hidden="true" id="plus"></i>&nbsp Lisää pelaaja</a>
       </div>
       <table id="players">
 
